# glavblock

./: Cargo.toml  README.md  README_ru.md  build_web.sh
docs/: .gitignore  index.html
src/: app.rs  area.rs  assets.rs  core.rs  events.rs  lib.rs  main.rs  people.rs  production.rs  queries.rs  resources.rs  screens.rs  storage.rs  turn.rs
