[package]
name = "glavblock"
version = "0.1.0"
authors = ["Artem Kanev <a-kanev@yandex.ru>"]
description = "Bastard of text quest and econimical strategy in dark Samosbor setting."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.10.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"]  }
rand = { version = "0.8.2" }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
