[package]
name = "glavblock"
version = "0.1.0"
authors = ["Artem Kanev <a-kanev@yandex.ru>"]
description = "Bastard of text quest and econimical strategy in dark Samosbor setting."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.11.0", features = ["http"]}
serde = { version = "1", features = ["derive"], optional = true }
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"]  }
rand = { version = "0.8.2" }
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.23.14" }
js-sys = "0.3.50"

# For compiling to web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.14"
egui_web = { version = "0.11.0", features = ["http"]}
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.23"
console_error_panic_hook = "0.1.6"

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
debug = true

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
